cluster/apps/homeassistant/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: homeassistant-deployment
  namespace: homeassistant
  labels:
    app: homeassistant
spec:
  replicas: 1
  selector:
    matchLabels:
      app: homeassistant
  template:
    metadata:
      labels:
        app: homeassistant
    spec:
      # hostNetwork: true
      containers:
        - name: homeassistant
          image: ghcr.io/home-assistant/home-assistant:stable
          securityContext:
            privileged: true
          ports:
            - name: web
              containerPort: 8123
          volumeMounts:
            - mountPath: /config
              name: homeassistant-config-storage
      volumes:
        - name: homeassistant-config-storage
          persistentVolumeClaim:
            claimName: homeassistant-config-claim
