cluster/apps/homeassistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: homeassistant-svc
  namespace: homeassistant
spec:
  selector:
    app: homeassistant
  ports:
    - name: web
      protocol: TCP
      port: 80
      targetPort: web
